make exception & graphics classes Java 8 friendly